--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -19,7 +19,7 @@ platforms:
 # comment this out, if Debian 7 is not needed
 - name: debian-7
   driver:
-    image: debian:7
+    image: dokken/debian-7
     intermediate_instructions:
       - RUN /usr/bin/apt-get update
       - RUN /usr/bin/apt-get install apt-transport-https lsb-release procps net-tools cron -y
