--- a/.kitchen.dokken.yml
+++ b/.kitchen.dokken.yml
@@ -8,6 +8,7 @@
 driver:
   name: dokken
   privileged: true # because Docker and SystemD/Upstart
+  chef_version: 12.19.36
 
 transport:
   name: dokken
